/*
 Localizable.strings
 Customerly

 */

/* Image Picker Action Sheet */
"actionSheetImagePicker_title" = "Select a file to send";
"actionSheetImagePicker_cancel" = "Cancel";
"actionSheetImagePicker_takePhoto" = "Take a Photo";
"actionSheetImagePicker_imageGallery" = "Image Gallery";
"actionSheetImagePicker_error" = "Error";
"actionSheetImagePicker_confirm" = "OK";
"actionSheetImagePicker_error_cameraNotAvailable" = "Ops, the camera is not available";
"actionSheetImagePicker_error_galleryNotAvailable" = "Ops, the photo gallery is not available";

/* Time Ago Since Date */
"timeAgoSinceDate_yearsAgo %d" = "%dy ago";
"timeAgoSinceDate_yearAgo %d" = "%dy ago";
"timeAgoSinceDate_monthsAgo %d" = "%dm ago";
"timeAgoSinceDate_monthAgo %d" = "%dm ago";
"timeAgoSinceDate_weeksAgo %d" = "%dw ago";
"timeAgoSinceDate_weekAgo %d" = "%dw ago";
"timeAgoSinceDate_daysAgo %d" = "%dd ago";
"timeAgoSinceDate_dayAgo %d" = "%dd ago";
"timeAgoSinceDate_hoursAgo %d" = "%dh ago";
"timeAgoSinceDate_hourAgo %d" = "%dh ago";
"timeAgoSinceDate_minutesAgo %d" = "%dm ago";
"timeAgoSinceDate_minuteAgo %d" = "%dm ago";
"timeAgoSinceDate_secondsAgo %d" = "%ds ago";
"timeAgoSinceDate_justNow" = "Now";

/* Conversation List */
"supportTitle" = "Support";
"youUser" = "You";
"conversationListPoweredBy" = "Live Chat ⚡️ Customerly";
"newConversationButton" = "Start a new conversation";

/* Chat View */
"chatTitleView" = "Chat";
"chatInsertEmail" = "Insert your email";
"chatOK" = "OK";
"chatCancel" = "Cancel";
"chatEmail" = "Email";
"chatAdminLastActivity" = "Last activity";
"chatViewPoweredBy" = "Live Chat ⚡️ Customerly";
"chatViewContactSupportLabel" = "Contact support writing your question below.";
"chatViewTextFieldPlaceholder" = "Ask your question";
"chatViewRichMessageText" = "This message was sent by email. Tap to read.";

/* Survey View */
"surveyTitleView" = "Survey";
"confirmSliderButton %d" = "Confirm %d";
"confirmButton" = "Confirm";

/* Extra */
"pullToRefresh" = "Pull to refresh";


