...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gdM-aB-dYp">
                                <rect key="frame" x="16" y="621" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="wB4-wn-bSs"/>
                                </constraints>
                                <state key="normal" title="Open Chat"/>
                                <connections>
                                    <action selector="openChat:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nTg-Sl-7Ue"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lkJ-7G-cnQ">
                                <rect key="frame" x="8" y="103" width="359" height="1"/>
...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ut7-Z4-E35">
                                <rect key="frame" x="8" y="233" width="359" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="gTg-ic-UYS"/>
                                </constraints>
                                <state key="normal" title="Register User"/>
                                <connections>
                                    <action selector="registerUser:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KI6-CH-ogL"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4h-9H-GRN">
                                <rect key="frame" x="8" y="402" width="359" height="30"/>
...
