...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUa-RZ-kXP" customClass="CyButton" customModule="CustomerlySDK" customModuleProvider="target">
                                                    <rect key="frame" x="8" y="0.0" width="359" height="40"/>
                                                    <color key="backgroundColor" red="0.2627450980392157" green="0.59215686274509804" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                                    <state key="normal" title="Button">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                            <real key="value" value="4"/>
                                                        </userDefinedRuntimeAttribute>
...
